<resources>
    <string name="app_name">SwipeAssignment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="product_type_array">
        <item>Type A</item>
        <item>Type B</item>
    </string-array>

    <string name="enter_product_name_string">Enter Product Name</string>
    <string name="enter_product_price_string">Enter Product Price</string>
    <string name="enter_product_tax_string">Enter Product Tax</string>
    <string name="upload_img_string">Upload Product Image</string>
    <string name="no_product_data_string">No Product Data</string>
    <string name="give_image_permission_string">Please give image permissions.</string>
    <string name="add_product_string">Add Product</string>
    <string name="please_enter_product_data_string">Please enter product name, price and tax.</string>
    <string name="search_product_string">Search Product</string>

</resources>